# AegisRAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml
data/: batch_text.txt  patterns_en.json  patterns_ko.json  policies.json  policies_ko.json  sample_input.txt  security_policies.json
examples/: advanced_usage.py  basic_usage.py
notebooks/: aegis_ver2.ipynb  aegis_ver3.ipynb
output/: report_v3.0_20251031_070203.json  report_v3.0_20251104_113403.json  results_20251021_114946.csv  results_20251021_114946.json  results_v3.0_20251031_070203.csv  results_v3.0_20251104_113403.csv  summary_v3.0_20251031_070203.txt  summary_v3.0_20251104_113403.txt
src/: __init__.py  analyzer.py  cache.py  config.py  explainer.py  logging_config.py  memory.py  models.py  rate_limiter.py  retriever.py  retry.py  self_rag.py  utils.py
tests/: __init__.py  test_analyzer.py  test_config.py  test_explainer.py  test_memory.py  test_production_features.py  test_refactored_code.py  test_retriever.py  test_self_rag.py  test_utils.py
utils/: embedding_utils.py  risk_analyzer.py
