[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisrag"
version = "3.0.0"
description = "Self-Reflective Security Intelligence Framework with explainable AI and adaptive threat analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Navy10021", email = "navy10021@github.com"}
]
keywords = [
    "security", "rag", "llm", "threat-detection",
    "explainable-ai", "self-rag", "insider-threat"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.12.0,<2.0.0",
    "sentence-transformers>=2.5.0,<3.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "numpy>=1.24.0,<1.25.0",
    "matplotlib>=3.7.0,<4.0.0",
    "wordcloud>=1.9.0,<2.0.0",
    "networkx>=3.1,<3.2",
    "psutil>=5.9.0,<6.0.0",
    "langdetect>=1.0.9,<2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-xdist>=3.3.0,<4.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    # Code quality
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "pylint>=2.17.0,<3.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.4.0,<2.0.0",
    # Security
    "bandit>=1.7.5,<2.0.0",
    "safety>=2.3.0,<3.0.0",
    # Documentation
    "sphinx>=7.0.0,<8.0.0",
]

[project.urls]
Homepage = "https://github.com/Navy10021/AegisRAG"
Repository = "https://github.com/Navy10021/AegisRAG"
Issues = "https://github.com/Navy10021/AegisRAG/issues"
Documentation = "https://github.com/Navy10021/AegisRAG#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*", "examples*", "notebooks*"]

[tool.setuptools.package-data]
src = ["*.json", "data/*.json"]

# Black configuration
[tool.black]
line-length = 127
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*/.venv/*"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langdetect.*",
    "wordcloud.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

# pylint configuration
[tool.pylint.main]
py-version = "3.8"
jobs = 0  # Use all available CPUs

[tool.pylint.messages_control]
max-line-length = 127
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access (for tests)
]

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 8
max-statements = 60
